# hello_ockam_embedded

./: Cargo.toml  Makefile  README.md  build.rs  memory-atsame54.x  memory-daisy.x  memory-stm32f4.x  memory.x  openocd-atsame54.cfg  openocd-nucleo-h7xx.cfg  openocd-uart.gdb  openocd.gdb
.cargo/: config.toml
examples/: 01-node.rs  03-routing.rs  04-routing-over-ble-transport-responder.rs  04-routing-over-transport-responder.rs  05-secure-channel-over-ble-transport-responder.rs  05-secure-channel-over-transport-responder.rs  allocator.rs  blinky_atsame54.rs  blinky_atsame54_uart.rs  blinky_daisy.rs  blinky_stm32f4.rs  blinky_stm32h7.rs  hello.rs  hello_transport.rs
src/: allocator.rs  echoer.rs  hop.rs  lib.rs  tracing_subscriber.rs
