[package]
authors = ["Ockam <pi@ockam.io>"]
edition = "2018"
resolver = "2"
readme = "README.md"
name = "hello-ockam"
version = "0.1.0"

[features]
#default = ["stm32h7", "bsp_nucleo_h7xx"]
default = ["stm32h7", "bsp_nucleo_h7xx", "no_main"]
#default = ["stm32h7", "bsp_nucleo_h7xx", "no_main", "debug_alloc"]
#default = ["stm32h7", "bsp_daisy"]
#default = ["stm32h7", "bsp_daisy", "debug_alloc"]
#default = ["stm32h7", "bsp_daisy", "no_main"]
#default = ["stm32f4"]

# Feature (enabled by default): "std" enables functionality expected to
# be available on a standard platform.
std = [
    "ockam/default",
]

# Feature: "no_std" enables functionality required for platforms
# without the standard library.
no_std = [
    "ockam/no_std",
    "core2", # needed for hello_transport example # TODO delete
]

# Feature: "alloc" enables support for heap allocation on "no_std"
# platforms, requires nightly.
alloc = [
    "ockam/alloc",
]

# Feature: "no_main" allows you to define an ockam node inside your
# own program entry-point rather than having ockam define the main()
# function. This is particularly useful on baremetal platforms.
no_main = [
    "ockam/no_main",
]

# Feature: "debug_alloc" enables a debug version of the heap allocator
debug_alloc = [ "ockam_executor/debug_alloc" ]

cortexm = [
    "alloc-cortex-m",
    "cortex-m",
    "cortex-m-rt",
    #"cortex-m-semihosting",
    #"panic-semihosting",
    "panic-itm",
]

qemu = ["no_std", "alloc", "cortexm"]
atsame54 = ["no_std", "alloc", "cortexm", "atsame54_xpro", "ockam_transport_ble/atsame54", "bluenrg"]
stm32f4 = ["no_std", "alloc", "cortexm", "stm32f4xx-hal", "ockam_transport_ble/stm32f4", "bluenrg"]
stm32h7 = ["no_std", "alloc", "cortexm", "ockam_transport_ble/stm32h7", "bluenrg"]
bsp_daisy = [
    "daisy_bsp",
]
bsp_nucleo_h7xx = [
    "nucleo-h7xx",
]

[dependencies]
#ockam = { version = "0.36", default_features = false, features = ["software_vault"] }
#ockam = { git = "https://github.com/ockam-network/ockam.git", branch = "develop",
ockam = { path = "../ockam.git/implementations/rust/ockam/ockam", default_features = false, features = ["no_std", "alloc", "software_vault"] }
ockam_core = { path = "../ockam.git/implementations/rust/ockam/ockam_core", default_features = false, features = ["no_std", "alloc"] }
ockam_executor = { path = "../ockam.git/implementations/rust/ockam/ockam_executor", default_features = false, features = ["no_std", "alloc"] }
ockam_transport_ble = { path = "../ockam_transport_ble.git", default_features = false, features = ["no_std", "alloc", "use_bluetooth_hci", ], optional = true }

# TODO https://docs.rs/alloc-compose/0.5.0/alloc_compose/
alloc-cortex-m = { version = "0.4.1", optional = true }
cortex-m = { version = "0.7.3", optional = true }
cortex-m-rt = { version = "0.6.14", optional = true }
cortex-m-semihosting = { version = "0.3.7", optional = true }
panic-semihosting = { version = "0.5.6", optional = true }
panic-itm = { version = "0.4.2", optional = true }

atsame54_xpro = { version = "0.2.0", optional = true }
stm32f4xx-hal = { version = "0.9.0", features = ["rt", "stm32f407"], optional = true }
daisy_bsp = { version = "0.4.2", features = ["seed", "log-itm"], optional = true }
nucleo-h7xx = { version = "0.1.1 ", default-features = false, features = ["log-itm"], optional = true }

#bluenrg = { version = "0.1.0", default-features = false, features = ["ms"], optional = true }
#bluenrg = { path = "../../Ockam.forks/bluenrg.git", features = ["ms"], optional = true }
bluenrg = { git = "https://github.com/antoinevg/bluenrg.git", rev = "84cc954", features = ["ms"], optional = true }
bluetooth-hci = { version = "0.1.0", default-features = false, features = ["version-4-2"] }
core2 = { version = "0.3", default-features = false, optional = true }

[target.'cfg(all(target_arch="wasm32",target_os="unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = true
incremental = false
lto = true
opt-level = "z"
codegen-units = 1
