[package]
authors = ["Ockam <pi@ockam.io>"]
edition = "2018"
resolver = "2"
readme = "README.md"
name = "hello-ockam"
version = "0.1.0"

# - features ------------------------------------------------------------------

[features]
default = ["atsame54"]
#default = ["stm32h7", "bsp_nucleo_h7xx"]
#default = ["stm32h7", "bsp_nucleo_h7xx"]
#default = ["stm32h7", "bsp_nucleo_h7xx", "debug_alloc"]
#default = ["stm32h7", "bsp_daisy"]
#default = ["stm32h7", "bsp_daisy", "debug_alloc"]
#default = ["stm32f4"]

# Feature (enabled by default): "std" enables functionality expected to
# be available on a standard platform.
std = [
    "ockam/default",
    "ockam_core/default",
    "ockam_executor/default",
    #"ockam_getrandom_software/default",
    "ockam_transport_ble/default",
]

# Feature: "no_std" enables functionality required for platforms
# without the standard library.
no_std = [
    "ockam/no_std",
    "ockam_core/no_std",
    "ockam_executor/no_std",
    #"ockam_getrandom_software/no_std",
    "ockam_transport_ble/no_std",
]

# Feature: "alloc" enables support for heap allocation on "no_std"
# platforms, requires nightly.
alloc = [
    "ockam/alloc",
    "ockam_core/alloc",
    "ockam_executor/alloc",
    #"ockam_getrandom_software/alloc",
    "ockam_transport_ble/alloc",
]

# Feature: "debug_alloc" enables a debug version of the heap allocator
#debug_alloc = [ "ockam_executor/debug_alloc" ]

# Architectures
cortexm = [
    "alloc-cortex-m",
    "cortex-m",
    "cortex-m-rt",
]

# Processors
qemu = [
     "no_std",
     "alloc",
     "cortexm",
     "panic-itm",
     "log-itm",
     #"panic-semihosting",
     #"cortex-m-semihosting",
]
atsame54 = [
    "no_std",
    "alloc",
    "cortexm",
    "panic-halt",
    "log-uart",
    "atsame54_xpro",
    "embedded-hal", # atsame54_xpro declares hal::hal as private
    "ockam_transport_ble/atsame54",
    "bluenrg",
]
stm32f4 = [
    "no_std",
    "alloc",
    "cortexm",
    "panic-itm",
    "log-itm",
    "stm32f4xx-hal",
    "ockam_transport_ble/stm32f4",
    "bluenrg"
]
stm32h7 = [
    "no_std",
    "alloc",
    "cortexm",
    "panic-itm",
    "log-itm",
    "ockam_transport_ble/stm32h7",
    "bluenrg"
]

# Boards
bsp_daisy = [
    "daisy_bsp",
]
bsp_nucleo_h7xx = [
    "nucleo-h7xx",
]


# Logging targets
log-itm = []
log-semihosting = []
log-uart = []


# - dependencies --------------------------------------------------------------

[dependencies]

# ockam
#ockam = { version = "0.49", default_features = false, features = ["software_vault"] }
#ockam = { git = "https://github.com/ockam-network/ockam.git", branch = "develop",
ockam = { path = "../ockam.git/implementations/rust/ockam/ockam", default_features = false, features = ["software_vault"], optional = true }
ockam_core = { path = "../ockam.git/implementations/rust/ockam/ockam_core", default_features = false, optional = true }
ockam_executor = { path = "../ockam.git/implementations/rust/ockam/ockam_executor", default_features = false, optional = true }
#ockam_getrandom_software = { path = "../ockam.git/implementations/rust/ockam/ockam_getrandom_software", default_features = false, optional = true }
ockam_transport_ble = { path = "../ockam.git/implementations/rust/ockam/ockam_transport_ble", default_features = false, features = ["no_std", "alloc", "use_bluetooth_hci", ], optional = true }
tracing = { version = "0.1", default-features = false }
nb = { version = "1.0.0" }

# cortex-m
alloc-cortex-m = { version = "0.4.1", optional = true }
cortex-m = { version = "0.7.3", optional = true }
cortex-m-rt = { version = "0.6.14", optional = true }
cortex-m-semihosting = { version = "0.3.7", optional = true }
panic-abort = { version = "0.3.2", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-itm = { version = "0.4.2", optional = true }
panic-semihosting = { version = "0.5.6", optional = true }

# atsame
atsame54_xpro = { version = "0.3.0", features = ["rt"], optional = true }
embedded-hal = { version = "0.2.3", optional = true }

# stm32
stm32f4xx-hal = { version = "0.9.0", features = ["rt", "stm32f407"], optional = true }
daisy_bsp = { version = "0.4.2", features = ["seed", "log-itm"], optional = true }
nucleo-h7xx = { version = "0.1.2", default-features = false, features = ["log-itm"], optional = true }

bluenrg = { version = "0.1.0", default-features = false, features = ["ms"], optional = true }
bluetooth-hci = { version = "0.1.0", default-features = false, features = ["version-4-2"] }

# other
core2 = { version = "0.3", default-features = false, optional = true }
[target.'cfg(all(target_arch="wasm32",target_os="unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
#[target.'cfg(target_arch="arm")'.dependencies]
#getrandom = { version = "0.2", features = ["custom"] }
#ockam_getrandom_failure = { path = "./ockam_getrandom_failure" }


# - profiles ------------------------------------------------------------------

[profile.dev]
debug = true
opt-level = "s"
incremental = false
#codegen-units = 1
#lto = true

[profile.release]
debug = true
incremental = false
#lto = true         # breaks atsame54
opt-level = "z"
#codegen-units = 1  # breaks atsame54
